kubernetes/dev/apps/redis-insight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5540
  selector:
    app: redisinsight
