kubernetes/dev/apps/redis-insight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-insight-ingress
  labels:
    app: redis-insight-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: redisinsight.home.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: redisinsight-service
                port:
                  number: 80
